Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -11,34 +11,14 @@
   <main class="slider" aria-roledescription="carousel">
     <div class="slides" id="slides">
 
-      <!-- SLIDE 1: Quilombo Queluz -->
-<section class="slide slide--quilombo" data-index="0" aria-hidden="false">
-  <div class="quilombo-header">
-    <img src="imagens/logo-quilombo-queluz.png" alt="Logo Quilombo Queluz" class="quilombo-logo" onerror="this.style.display='none'">
-  </div>
-  
-  <div class="quilombo-content">
-    <h1>QUILOMBO QUELUZ: <span>UM RESGATE HISTÓRICO-CULTURAL</span></h1>
-    <h2>Da identidade quilombola em Anajatuba-MA</h2>
-    
-    <div class="quilombo-highlights">
-      <div class="highlight-item">
-        <div class="highlight-icon">🕊️</div>
-        <p>Resgate da memória coletiva</p>
-      </div>
-      <div class="highlight-item">
-        <div class="highlight-icon">🌳</div>
-        <p>Preservação cultural</p>
-      </div>
-      <div class="highlight-item">
-        <div class="highlight-icon">✊🏿</div>
-        <p>Identidade quilombola</p>
-      </div>
-    </div>
-  </div>
-  
-  <div class="quilombo-pattern" aria-hidden="true"></div>
-</section>
+      <!-- SLIDE 1: Banner / brasão (fundo grande) -->
+      <section class="slide slide--title" data-index="0" aria-hidden="false">
+        <div class="title-wrap">
+          <h1>Inventário da realidade<br><span>do município de Paulo Ramos</span></h1>
+          <div class="subtitle">Uma jornada pela história e cultura local</div>
+        </div>
+        <div class="gradient-overlay" aria-hidden="true"></div>
+      </section>
 
       <!-- SLIDE 2: História do município -->
       <section class="slide" data-index="1" aria-hidden="true">
