Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <div class="slides" id="slides">
 
       <!-- SLIDE 1: Banner / Logo -->
-      <section class="slide slide--title" data-index="0" aria-hidden="false">
-        <div class="title-wrap">
-          <h1>Quilombo Queluz<br><span>Um resgate histórico-cultural da identidade quilombola em Anajatuba-MA</span></h1>
-          <div class="subtitle">Preservando tradições, fortalecendo identidades</div>
-        </div>
-        <div class="gradient-overlay" aria-hidden="true"></div>
-      </section>
+<section class="slide slide--title" data-index="0" aria-hidden="false">
+  <div class="logo-container">
+    <img src="slade1/logo.jpg" alt="Logo Quilombo Queluz" class="logo-image">
+  </div>
+  <div class="title-wrap">
+    <h1>Quilombo Queluz<br><span>Um resgate histórico-cultural da identidade quilombola em Anajatuba-MA</span></h1>
+    <div class="subtitle">Preservando tradições, fortalecendo identidades</div>
+  </div>
+  <div class="gradient-overlay" aria-hidden="true"></div>
+</section>
 
       <!-- SLIDE 2: Componentes Curriculares -->
       <section class="slide" data-index="1" aria-hidden="true">
