Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!-- SLIDE 1: Banner / Logo -->
 <section class="slide slide--title" data-index="0" aria-hidden="false">
   <div class="logo-container">
-    <img src="slade1/logo.jpg" alt="Logo Quilombo Queluz" class="logo-image">
+    <img src="slade1/logo.jpg" alt="Logo UEMA" class="logo-image">
   </div>
   <div class="title-wrap">
     <h1>Quilombo Queluz<br><span>Um resgate histórico-cultural da identidade quilombola em Anajatuba-MA</span></h1>
