Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -70,25 +70,26 @@
       </section>
 
       <!-- SLIDE 4: Justificativa -->
-      <section class="slide" data-index="3" aria-hidden="true">
-        <div class="content-wrap column">
-          <h2>Justificativa</h2>
-          <p class="lead-text">
-            Este trabalho foi feito através de pesquisas, entrevistas e levantamento de dados sobre o quilombo Queluz em Anajatuba-MA.
-          </p>
-          <div class="highlight-text">
-            A iniciativa surge da necessidade de enfrentar a falta de políticas públicas e dar visibilidade às lutas, conquistas e desafios do quilombo.
-          </div>
-          <ul class="bullet">
-            <li>Ausência de ensino médio e EJA (Educação de Jovens e Adultos)</li>
-            <li>Saneamento básico deficiente</li>
-            <li>Sistema de saúde precário</li>
-          </ul>
-          <div class="highlight-box">
-            <p>A pesquisa serve como ferramenta de empoderamento, reforçando nossa identidade e ampliando a consciência de nossos direitos.</p>
-          </div>
-        </div>
-      </section>
+<section class="slide" data-index="3" aria-hidden="true">
+  <div class="content-wrap column">
+    <h2>Justificativa</h2>
+    <p class="lead-text">
+      Este trabalho foi feito através de pesquisas, entrevistas e levantamento de dados sobre o quilombo Queluz em Anajatuba-MA.
+    </p>
+    <div class="highlight-text">
+      A iniciativa surge da necessidade de enfrentar a falta de políticas públicas e dar visibilidade às lutas, conquistas e desafios do quilombo.
+    </div>
+    <ul class="bullet">
+      <li>Ausência de ensino médio e EJA (Educação de Jovens e Adultos)</li>
+      <li>Saneamento básico deficiente</li>
+      <li>Sistema de saúde precário</li>
+    </ul>
+    <div class="highlight-box">
+      <p>A pesquisa serve como ferramenta de empoderamento, reforçando nossa identidade e ampliando a consciência de nossos direitos.</p>
+    </div>
+    <img src="slide4/slide4.jpg" alt="Comunidade Quilombola" class="justificativa-img">
+  </div>
+</section>
 
       <!-- SLIDE 5: Objetivos -->
       <section class="slide" data-index="4" aria-hidden="true">
