Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </section>
 
-      <!-- SLIDE 3: Introdução -->
+            <!-- SLIDE 3: Introdução (com imagem adicionada) -->
       <section class="slide" data-index="2" aria-hidden="true">
         <div class="content-wrap">
           <div class="icon-circle intro-icon">
@@ -66,6 +66,7 @@
               <p>O quilombo representa um importante polo de cultura, tradição, religião e ancestralidade, elementos fundamentais para a identidade e resistência do nosso povo.</p>
             </div>
           </div>
+          <img src="slide3/slide3.jpg" alt="Vista do Quilombo Queluz" class="intro-img">
         </div>
       </section>
 
