Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <!-- SLIDE 1: Banner / Logo -->
       <section class="slide slide--title" data-index="0" aria-hidden="false">
         <div class="logo-container">
-          <img src="assets/capa.jpg" alt="Logo UEMA" class="logo-image">
-          <img src="assets/capa.2.jpg" alt="Logo PROETNOS" class="logo-image">
+          <img src="assets/logo.jpg" alt="Logo UEMA" class="logo-image">
+          <img src="assets/logo.2.jpg" alt="Logo PROETNOS" class="logo-image">
         </div>
         <div class="title-wrap">
           <h1>UNIVERSIDADE ESTADUAL DO MARANHÃO<br><span>RELATÓRIO DE PESQUISA COMUNIDADE QUILOMBO QUELUZ</span></h1>
@@ -244,7 +244,7 @@
             </div>
             
             <div class="interview">
-              <h3>Ane Caroline, líder jovem</h3>
+              <h3>Ane Caroline, líder do grupo de jovem</h3>
               <p>"Ser jovem quilombola é carregar a história de luta e ter esperança no futuro. Nosso papel é preservar os saberes ancestrais."</p>
             </div>
           </div>
