Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             </div>
             
             <div class="interview">
-              <h3>Ane Caroline, líder do grupo de jovem</h3>
+              <h3>Ane Caroline, líder do grupo de jovens da Igreja católica</h3>
               <p>"Ser jovem quilombola é carregar a história de luta e ter esperança no futuro. Nosso papel é preservar os saberes ancestrais."</p>
             </div>
           </div>
