Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -259,18 +259,19 @@
       </section>
 
       <!-- SLIDE 13: Componentes Curriculares -->
-      <section class="slide" data-index="12" aria-hidden="true">
-        <div class="content-wrap column">
-          <h2>Componentes Curriculares</h2>
-          <ul class="features">
-            <li><span class="feature-icon">📚</span> Fundamentos da Educação do Campo</li>
-            <li><span class="feature-icon">🧠</span> Filosofia Educativa no Campo</li>
-            <li><span class="feature-icon">🌱</span> Território e Identidade</li>
-            <li><span class="feature-icon">🕰️</span> História da América Latina</li>
-            <li><span class="feature-icon">👥</span> Prática Político-Social</li>
-          </ul>
-        </div>
-      </section>
+<section class="slide" data-index="12" aria-hidden="true">
+  <div class="content-wrap column">
+    <h2>Componentes Curriculares</h2>
+    <ul class="features">
+      <li><span class="feature-icon">📚</span> Fundamentos da Educação do Campo</li>
+      <li><span class="feature-icon">🧠</span> Filosofia Educativa no Campo</li>
+      <li><span class="feature-icon">🌱</span> Território e Identidade</li>
+      <li><span class="feature-icon">🕰️</span> História da América Latina</li>
+      <li><span class="feature-icon">👥</span> Prática Político-Social</li>
+    </ul>
+    <div class="thank-you">Obrigada</div>
+  </div>
+</section>
 
     </div>
 
